--- a/Dockerfile.composer-fix
+++ b/Dockerfile.composer-fix
@@ -3,28 +3,39 @@ FROM php:8.2-cli
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Instalar dependencias del sistema
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    git \
-    curl \
-    libzip-dev \
-    zip \
-    unzip \
-    && docker-php-ext-install zip pdo_mysql pdo_pgsql \
-    && rm -rf /var/lib/apt/lists/*
+# Actualizar repositorios primero
+RUN apt-get update || true
+
+# Instalar paquetes básicos uno por uno (con manejo de errores)
+RUN apt-get install -y --no-install-recommends git || true
+RUN apt-get install -y --no-install-recommends curl || true
+RUN apt-get install -y --no-install-recommends libzip-dev || true
+RUN apt-get install -y --no-install-recommends zip || true
+RUN apt-get install -y --no-install-recommends unzip || true
+
+# Instalar extensiones PHP (una por una)
+RUN docker-php-ext-install zip || true
+RUN docker-php-ext-install pdo_mysql || true
+RUN docker-php-ext-install pdo_pgsql || true
+
+# Limpiar
+RUN apt-get clean || true
+RUN rm -rf /var/lib/apt/lists/* || true
 
 # Instalar Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Instalar Node.js
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
-    && apt-get install -y nodejs \
-    && rm -rf /var/lib/apt/lists/*
+# Instalar Node.js desde NodeSource (en pasos separados)
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - || true
+RUN apt-get update || true
+RUN apt-get install -y nodejs || true
+RUN apt-get clean || true
+RUN rm -rf /var/lib/apt/lists/* || true
 
 WORKDIR /var/www/html
 
-# Copiar archivos
-COPY . .
+# Copiar solo composer.json primero (para cache de Docker)
+COPY composer.json composer.lock* ./
 
 # Verificar que composer.json existe
 RUN if [ ! -f "composer.json" ]; then echo "ERROR: composer.json no encontrado" && exit 1; fi
@@ -32,11 +43,18 @@ RUN if [ ! -f "composer.json" ]; then echo "ERROR: composer.json no encontrado" 
 # Instalar dependencias con múltiples estrategias
 RUN composer --version || true
 
-# Intentar instalación con diferentes opciones
-RUN composer install --no-dev --optimize-autoloader --no-interaction --ignore-platform-reqs 2>&1 || \
-    composer install --no-dev --no-interaction --ignore-platform-reqs 2>&1 || \
-    composer install --no-interaction --ignore-platform-reqs 2>&1 || \
-    (echo "Composer install falló, pero continuando..." && true)
+# Intentar instalación con diferentes opciones (con logs)
+RUN composer install --no-dev --optimize-autoloader --no-interaction --ignore-platform-reqs 2>&1 | tee /tmp/composer.log || \
+    (echo "Primer intento falló, intentando sin --optimize-autoloader..." && \
+     composer install --no-dev --no-interaction --ignore-platform-reqs 2>&1 | tee /tmp/composer2.log) || \
+    (echo "Segundo intento falló, intentando básico..." && \
+     composer install --no-interaction --ignore-platform-reqs 2>&1 | tee /tmp/composer3.log) || \
+    (echo "Todos los intentos fallaron, mostrando último error:" && \
+     cat /tmp/composer3.log 2>/dev/null || cat /tmp/composer2.log 2>/dev/null || cat /tmp/composer.log 2>/dev/null || true && \
+     echo "Continuando sin dependencias..." && true)
+
+# Copiar el resto de los archivos
+COPY . .
 
 # Node (opcional)
 RUN if [ -f "package.json" ]; then npm install && npm run build || true; fi
@@ -47,4 +65,3 @@ RUN chmod -R 775 storage bootstrap/cache || true
 EXPOSE ${PORT:-8000}
 
 CMD php artisan serve --host=0.0.0.0 --port=${PORT:-8000}
-
