--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "barryvdh/laravel-dompdf": "*",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "barryvdh/laravel-dompdf": "^2.0",
+        "laravel/framework": "^10.48",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.10.1",
+        "symfony/css-selector": "^7.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.24",
-        "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "fakerphp/faker": "^1.21",
+        "laravel/pail": "^1.0",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.18",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.1"
     },
     "autoload": {
         "psr-4": {
